--- a/Landing Page/style.css
+++ b/Landing Page/style.css
@@ -352,6 +352,7 @@ a:focus {
   padding: 3.2rem 13.2rem;
   padding-bottom: 11.7rem;
   font-size: 2.2rem;
+  font-weight: 400;
 }
 
 .how-it-works-text {
@@ -393,7 +394,7 @@ a:focus {
 
 .core-services-container {
   background: rgba(17, 37, 85, 1);
-  padding: 8rem 10.2rem 14rem 10.2rem ;
+  padding: 8rem 10.2rem 14rem 10.2rem;
 }
 
 .core-services-header {
@@ -412,7 +413,7 @@ a:focus {
   width: 31%;
   background: #fff;
   padding: 4rem 3.2rem;
-  border-radius: .8rem;
+  border-radius: 0.8rem;
 }
 
 .services-options-header {
@@ -426,5 +427,27 @@ a:focus {
 /* choose us conatiner */
 
 .choose-us-container {
-  padding: 2.9rem 9.8rem ;
+  padding: 2.9rem 9.8rem;
+  font-size: 2.4rem;
+}
+
+.choose-us-svg {
+  z-index: 1;
+}
+
+.choose-us-options-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.choose-us-option {
+  width: 20%;
+  border-radius: 0.8rem;
+  padding: 2.4rem;
+  box-shadow: 0 1rem 2rem rgba(41, 41, 42, 0.07);
+}
+
+.choose-us-option-text {
+  margin-bottom: 2.3rem;
+  font-weight: 700;
 }
