--- a/Landing Page/style.css
+++ b/Landing Page/style.css
@@ -428,26 +428,85 @@ a:focus {
 
 .choose-us-container {
   padding: 2.9rem 9.8rem;
-  font-size: 2.4rem;
+  position: relative;
 }
 
 .choose-us-svg {
+  position: absolute;
   z-index: 1;
+  top: 0;
 }
 
 .choose-us-options-container {
-  display: flex;
-  justify-content: space-between;
+  position: absolute;
+  z-index: 2;
+  margin-right: 9.8rem;
+  top: 50%;
+  transform: translateY(-50%);
+  /* padding-top: 5.1rem; */
+  padding-right: 3.9rem;
 }
 
-.choose-us-option {
-  width: 20%;
+.choose-us-options-header {
+  font-size: 3.6rem;
+  margin-bottom: 6.3rem;
+  font-weight: 700;
+}
+
+.choose-us-options {
+  display: flex;
+  justify-content: space-between;  
+}
+
+.choose-us-options-text-container {
+  width: 23%; 
+  font-size: 2.4rem;
   border-radius: 0.8rem;
   padding: 2.4rem;
-  box-shadow: 0 1rem 2rem rgba(41, 41, 42, 0.07);
+  background: #fff;
+  box-shadow: 0 1rem 2rem rgba(41, 41, 42, 0.07);  
 }
 
-.choose-us-option-text {
+.choose-us-options-text {
   margin-bottom: 2.3rem;
   font-weight: 700;
+}
+
+/* explore plans */
+
+.explore-plans-container {
+  padding: 8rem 12rem;
+  font-size: 2.4rem;
+}
+
+/* .explore-container {
+  
+} */
+
+.explore-text {
+  font-size: 3.6rem;
+  line-height: 4.85rem;
+  margin-bottom: 5.6rem;
+}
+
+.pay-ayg-btn,
+.capitation-btn {
+  text-align: center;
+  font-size: 2.4rem;
+  font-weight: 700;
+  color: #fff;
+}
+
+.pay-ayg-btn {
+  background: rgba(17, 37, 85, 1);
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+  padding: 3rem 4.5rem;
+}
+
+.capitation-btn {
+  background: rgba(188, 188, 188, 1);
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  padding: 3rem 6.1rem;
 }
